style: :lipstick: Fixed Forgot password page overlap
Fixed the overlap between header and page content for password reset.

--- a/src/app/modules/auth/pages/forgot-password-page/forgot-password-page.component.scss
+++ b/src/app/modules/auth/pages/forgot-password-page/forgot-password-page.component.scss
@@ -1,14 +1,12 @@
 .forgot-password-page{
 
   .login-header {
-    padding: 25px 0px 10px;
-    margin-bottom: 30px;
-    position: absolute;
-    top: 0;
-    right: 0;
-    left: 0;
-    overflow-x: hidden;
+    padding: 10px;
+    width: 100%;
+    border-bottom: 1px solid rgb(217, 218, 220);
     box-shadow: rgba(0, 0, 0, 0.1) 0px 2px 4px 0px;
+    margin-bottom: 10px;
+    text-align: center;
 
     &__logo{
       padding: 0px 0px 12px;
@@ -19,6 +17,15 @@
         width: 156px;
       }
     }
+
+  }
+
+  .forgot-password-container  {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    justify-content: center;
+    height: 100vw;
   }
 
   .title{
